--- a/Views/Courses/index.cshtml
+++ b/Views/Courses/index.cshtml
@@ -1,16 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-
-<body style="border: 1px solid red;">
-
-    <h1>sono index</h1>
-
-</body>
-
-</html>
+<h1>
+    Catalogo dei corsi
+</h1>
+@for (int i = 1; i <= 10; i++)
+{
+    <hr>
+    <div class="row course">
+        <div class="col-md-1">
+            <img src="~/logo.svg" width="52" height="52">
+        </div>
+        <div class="col-md-5">
+            <h2>Titolo del corso</h2>
+            <author>di Nome autore</author>
+        </div>
+        <div class="col-md-2 rating">
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+            <i class="fas fa-star"></i>
+        </div>
+        <div class="col-md-2 price">
+            EUR 10,99<br><s>EUR 12,99</s>
+        </div>
+        <div class="col-md-2 d-flex align-items-center">
+            <a class="btn btn-outline-primary" asp-action="Detail" asp-route-id="5">Dettaglio</a>
+        </div>
+    </div>
+}
