--- a/wwwroot/style.css
+++ b/wwwroot/style.css
@@ -11,19 +11,21 @@ h1 {
 }
 
 hr {
-    margin:0.5em 0;
+    margin: 0.5em 0;
 }
 
 author {
     font-style: italic;
     color: #888;
 }
+
 .rating {
     color: orange;
     white-space: nowrap;
 }
+
 .price s {
-    color :#aaa;
+    color: #aaa;
     font-size: 0.8em;
 }
 
@@ -34,4 +36,43 @@ footer {
     padding-bottom: 2em;
     text-align: center;
     color: gray;
+}
+
+h2 {
+    font-size: 1.5rem;
+    font-weight: 300;
+}
+
+/* Course info */
+.course-info {
+    margin-bottom: 2em;
+}
+
+.course-info aside {
+    background-color: #f5f5f5;
+    padding: 1em;
+    height: 100%;
+}
+
+.course-info .register-button,
+.course-info .course-image {
+    margin-top: 1em;
+}
+
+.course-info .price {
+    font-size: 1.3rem;
+}
+
+.course-info .subscribe-course {
+    margin-bottom: 1em;
+}
+
+.course-lessons .lesson-duration i,
+.course-lessons .course-duration i {
+    margin-right: 0.3em;
+}
+
+.course-lessons .course-duration {
+    font-weight: bold;
+
 }
