--- a/Views/Courses/index.cshtml
+++ b/Views/Courses/index.cshtml
@@ -1,6 +1,7 @@
 @model List<CourseViewModel>    
 <h1>
     @ViewData["Title"]
+    <a class="btn btn-outline-primary btn-sm" asp-action="Create"><i class="fa fa-plus"></i> Crea nuovo</a>
 </h1>
 @foreach (CourseViewModel course in Model)
 {
