--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using MyCourse
 @using MyCourse.Models
 @using MyCourse.Models.ViewModels
+@using MyCourse.Models.InputModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
